added css and more logic

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Quiz</title>
 </head>
 <body>
+    <h1>Basic Quiz</h1>
     <div id="quiz-container">
-        <h1>Basic Quiz</h1>
+        <div class="border">
+        
         <p id="question"></p>
         <form id="quiz-form">
             <label>
@@ -28,6 +31,7 @@
             <button type="submit">Submit</button>
         </form>
         <p id="result"></p>
+        </div>
     </div>
 
         <script src="./script.js"></script>
