added css more logic and highscore feature

--- a/index.html
+++ b/index.html
@@ -10,27 +10,10 @@
     <h1>Basic Quiz</h1>
     <div id="quiz-container">
         <div class="border">
-        
-        <p id="question"></p>
-        <form id="quiz-form">
-            <label>
-                <input type="radio" name="answer" value="A">
-                <span id="optionA"></span>
-            </label>
-            <br>
-            <label>
-                <input type="radio" name="answer" value="B">
-                <span id="optionB"></span>
-            </label>
-            <br>
-            <label>
-                <input type="radio" name="answer" value="C">
-                <span id="optionC"></span>
-            </label>
-            <br>
-            <button type="submit">Submit</button>
-        </form>
-        <p id="result"></p>
+            <div id="quiz-content">
+             <p class="result"></p>
+            </div>
+           
         </div>
     </div>
 
